Sharding config servers should not be pinging the distributed lock

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.2.0-rc4
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding C (11/20/15)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This was found through log output inspection. The line below indicates that the config server is trying to ping the distributed lock (which it manages):

      c20002| 2015-10-30T15:55:16.372-0400 W SHARDING [replSetDistLockPinger] pinging failed for distributed lock pinger :: caused by :: findAndModify query predicate didn't match any lock document
      

      This is caused most likely because connections to shards (and the CSRS config server is another shard) are sending setShardVersion init command in order to indicate that the host is sharded.

      We should either special-case config servers so they do not run the distributed lock pinger thread or if we want to get closer in the direction of allowing any shard to run as a config server, we should make sure that the distributed lock pinging is done correctly and by the config server primary only.

            Assignee:
            Randolph Tan
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: