SERVER-21233 Sharding config servers should not be pinging the distributed lock