jstests/sharding/sync_cluster_config/ssv_init.js
@@ -1,11 +1,7 @@
-/**
- * Test that setShardVersion should not reject a configdb string with the same
- * replica set name, but with a member list that is not strictly the same.
- */
 (function() {
 "use strict";
 
-var st = new ShardingTest({ shards: 1 });
+var st = new ShardingTest({ shards: 1, other: { sync: true }});
 
 var testDB = st.s.getDB('test');
 testDB.adminCommand({ enableSharding: 'test' });
@@ -18,29 +14,13 @@ var directConn = new Mongo(st.d0.host);
 var adminDB = directConn.getDB('admin');
 
 var configStr = adminDB.runCommand({ getShardVersion: 'test.user' }).configServer;
-var alternateConfigStr = configStr.substring(0, configStr.lastIndexOf(','));
+var configStrArr = configStr.split(',');
+assert.eq(3, configStrArr.length);
 
-var shardDoc = st.s.getDB('config').shards.findOne();
-
-assert.commandWorked(adminDB.runCommand({
-    setShardVersion: '',
-    init: true,
-    authoritative: true,
-    configdb: alternateConfigStr,
-    shard: shardDoc._id,
-    shardHost: shardDoc.host
-}));
-
-assert.commandFailed(adminDB.runCommand({
-    setShardVersion: '',
-    init: true,
-    authoritative: true,
-    configdb: 'bad-rs/local:12,local:34',
-    shard: shardDoc._id,
-    shardHost: shardDoc.host
-}));
+var badConfigStr = configStrArr[1] + ',' + configStrArr[2] + ',' + configStrArr[0];
 
 var configAdmin = st.c0.getDB('admin');
+
 // Initialize internal config string.
 assert.commandWorked(configAdmin.runCommand({
     setShardVersion: '',
@@ -55,7 +35,7 @@ assert.commandFailed(configAdmin.runCommand({
     setShardVersion: '',
     init: true,
     authoritative: true,
-    configdb: 'bad-rs/local:12,local:34',
+    configdb: badConfigStr,
     shard: 'config'
 }));
 
@@ -64,9 +44,10 @@ assert.commandWorked(configAdmin.runCommand({
     setShardVersion: '',
     init: true,
     authoritative: true,
-    configdb: alternateConfigStr,
+    configdb: configStr,
     shard: 'config'
 }));
 
 st.stop();
+
 })();
